NXP-13965: Make use of java.io.tmpdir
Make the commandLine service use the environment extension point